--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PagaApp">
+        <activity android:name=".PagaCreditosBancarios.CreditosPersonales"></activity>
+        <activity android:name=".PagaCreditosBancarios.PagoFallidoCB" />
+        <activity android:name=".PagaCreditosBancarios.PagoExitosoCB" />
+        <activity android:name=".PagaCreditosBancarios.PagaCreditosBancarios" />
+        <activity android:name=".PagaTarjetaCredito.PagoFallidoTC" />
+        <activity android:name=".PagaTarjetaCredito.PagoExitosoTC" />
+        <activity android:name=".PuntajeCrediticio.TipsCrediticios" />
+        <activity android:name=".PuntajeCrediticio.PuntajeCrediticio" />
+        <activity android:name=".QrEstablecimientos.EscaneaQrPago" />
+        <activity android:name=".RecargaBancosPse.RecargaEfectivo" />
+        <activity android:name=".RecargaBancosPse.RecargaPSE" />
+        <activity android:name=".RecargaBancosPse.RecargarCuenta" />
+        <activity android:name=".HistorialDePagos.HistorialPagos" />
+        <activity android:name=".BolsilloDinero.BolsilloAhorrador" />
+        <activity android:name=".PagaTarjetaCredito.PagaTarjetaCredito" />
+        <activity android:name=".IngresoPassword.Menu" />
+        <activity android:name=".IngresoPassword.Soporte" />
+        <activity android:name=".IngresoPassword.OlvideMiClave" />
+        <activity android:name=".IngresoPassword.Ingresar" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
